Added swagger route
